Update mapState module to support the modeling app.

--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -51,13 +51,13 @@
 
 <li class="explore-map {% block activeexplore %}active{% endblock %}"><a href="{% url 'map' instance_url_name=request.instance.url_name %}">{% trans "Explore Map" %}</a></li>
 
-{% if settings.MODELING_PRIORITIZATION_VIEW_NAME %}
+{% if settings.MODELING_VIEW_NAME %}
   {% if request.instance|feature_enabled:'prioritize_planting_sites' or request.instance|feature_enabled:'model_tree_growth' %}
     <li class="dropdown {% block activemodeling %}{% endblock %}">
       <a class="dropdown-toggle" data-toggle="dropdown">{% trans "Plan" %}</a>
-      <ul class="dropdown-menu">
-        <li><a href="{% url settings.MODELING_PRIORITIZATION_VIEW_NAME instance_url_name=request.instance.url_name %}">{% trans "Prioritize Planting Sites" %}</a></li>
-        <li><a href="{% url settings.MODELING_SCENARIOS_VIEW_NAME instance_url_name=request.instance.url_name %}">{% trans "Model Urban Forest Scenarios" %}</a></li>
+      <ul class="modeling dropdown-menu">
+        <li><a href="{% url settings.MODELING_VIEW_NAME instance_url_name=request.instance.url_name %}?m=prioritization" class="prioritization">{% trans "Prioritize Planting Sites" %}</a></li>
+        <li><a href="{% url settings.MODELING_VIEW_NAME instance_url_name=request.instance.url_name %}?m=scenarios" class="scenarios">{% trans "Model Urban Forest Scenarios" %}</a></li>
         <li><a href="">{% trans "Saved Simulations" %}</a></li>
       </ul>
     </li>
