Integrate comment moderation prototypes
Misc:
* Flag-related stuff is not yet implemented
* rename `comments_review` function as `comment_moderation` to match language used elsewhere
* utility function `detail_link` now supports linking to users and to `MapFeature` subclasses like `Plot`
* Fix initialization of photo review page

--- a/opentreemap/treemap/templates/treemap/photo_review.html
+++ b/opentreemap/treemap/templates/treemap/photo_review.html
@@ -15,7 +15,10 @@
 {% block scripts %}
 <script>
 (function(require) {
-   require('treemap/photoReview').init();
+   require('treemap/photoReview').init({
+       url: "{% url 'photo_review' instance_url_name=request.instance.url_name %}",
+       nextPhotoUrl: "{% url 'photo_review_next' instance_url_name=request.instance.url_name %}"
+   });
 })(require);
 </script>
 {% endblock scripts %}
