Add leaflet-draw 0.2.2 plugin.
This is for drawing the polygon feature for modeling tree distributions.

--- a/opentreemap/treemap/css/sass/partials/pages/_map.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_map.scss
@@ -62,6 +62,15 @@
 }
 
 
+.leaflet-draw-toolbar a {
+	background-image: url(/static/img/leaflet-draw/spritesheet.png) !important;
+}
+
+.leaflet-retina .leaflet-draw-toolbar a {
+	background-image: url(/static/img/leaflet-draw/spritesheet-2x.png) !important;
+}
+
+
 .leaflet-control {
 
     &.leaflet-control-attribution {
