Fontello icon substitution
Fontello icon substitution

--- a/opentreemap/otm_comments/templates/otm_comments/partials/moderation.html
+++ b/opentreemap/otm_comments/templates/otm_comments/partials/moderation.html
@@ -10,7 +10,7 @@
             <li><a href="#">Hidden</a></li>
             <li><a href="#">Archived</a></li>
         </ul>
-        <button type="button" class="btn btn-sm" ><i class="fa fa-share-square-o"></i>Export All</button>
+        <button type="button" class="btn btn-sm" ><i class="icon-export"></i>Export All</button>
     </h1>
     <div class="comments">
         <div class="row comment-table">
@@ -21,7 +21,7 @@
                             <th class="selector">
                                 <div class="btn-group">
                                     <input type="checkbox">
-                                    <button type="button" class="btn dropdown-toggle" data-toggle="dropdown"><i class="fa fa-caret-down"></i></button>
+                                    <button type="button" class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-down-dir"></i></button>
                                         <ul class="dropdown-menu" role="menu">
                                             <li><a href="#">Hide</a></li>
                                             <li><a href="#">Unhide</a></li>
