--- a/opentreemap/otm_comments/templates/otm_comments/partials/moderation_row.html
+++ b/opentreemap/otm_comments/templates/otm_comments/partials/moderation_row.html
@@ -5,7 +5,7 @@
 <tr>
     <td><input type="checkbox"></td>
     <td><a href="{{ comment.content_object|detail_link }}">{{ comment.id }}</a></td>
-    <td><span class="label label-danger">7</span></td>
+    <td><span class="label label-danger">{{ comment.visible_flag_count }}</span></td>
     <td><a class="clearfix" href="{{ comment.user|detail_link }}">
           {{ comment.user_name }}
         </a>
