Clean collection UDF values before showing them on the plot detail page
There was machinery in place to do this cleaning, but it requires retrieving
collection UDFs through the 'udf' property on UDFModel

--- a/opentreemap/treemap/templates/treemap/partials/collection_udf_row.html
+++ b/opentreemap/treemap/templates/treemap/partials/collection_udf_row.html
@@ -6,7 +6,15 @@
    {% endif %}
    >
   {% for field in udf.datatype_dict %}
-  <td>{{ value.data|get:field.name }}</td>
+  <td>
+  {% with field_value=value|get:field.name %}
+    {% if field.type == "date" %}
+    {{ field_value|date:request.instance.short_date_format }}
+    {% else %}
+    {{ field_value }}
+    {% endif %}
+  {% endwith %}
+  </td>
   {% endfor %}
   <td></td>
 </tr>
