--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -171,12 +171,10 @@
     {% block searchscripts %}
     {% endblock searchscripts %}
 
-    {% block exportscript %}
-    {% endblock exportscript %}
-
     <script type="text/javascript">
       (function(require) {
           require("treemap/buttonEnabler").run({ config: otm.settings });
+          require("treemap/export").run({ config: otm.settings });
       })(require);
     </script>
 
