Fixes #1422, layout issues with checkboxes in add process

--- a/opentreemap/treemap/css/sass/partials/pages/_addtree.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_addtree.scss
@@ -97,7 +97,7 @@
                 select {
                     font-size: 1.2rem;
                 }
-                span:not('.input-group-addon') {
+                span:not(.input-group-addon) {
                     display: block;
                 }
                 .twitter-typeahead{
