--- a/opentreemap/treemap/css/sass/partials/_layout.scss
+++ b/opentreemap/treemap/css/sass/partials/_layout.scss
@@ -134,6 +134,7 @@ body {
 		font-size: 1.4rem;
 		font-weight: 300;
 		line-height: 2.1rem;
+        word-wrap: break-word;
 	}
     p {
         clear: both;
