Fixes #930, species input should be wider

--- a/opentreemap/treemap/css/sass/partials/pages/_sidebar.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_sidebar.scss
@@ -108,6 +108,11 @@
             }
         }
     }
+    .tree-details-species + div[data-class="edit"] {
+        span.twitter-typeahead {
+            display: block !important;
+        }
+    }
 }
 
 #move-plot-buttons {
