--- a/opentreemap/treemap/templates/treemap/field/species_div.html
+++ b/opentreemap/treemap/templates/treemap/field/species_div.html
@@ -10,13 +10,14 @@
   </div>
   {% if field.is_editable %}
   <div style="display: none;" data-class="edit" data-field="{{ field.identifier }}">
-    <label>{% trans "Species" %}</li>
+    <label>{% trans "Species" %}</label>
     <div>
       {% include "treemap/field/species_typeahead.html" %}
     </div>
     <div class="alert alert-danger text-danger"
         style="display: none;"
         {% include "treemap/field/attrs.html" with class="error"%}></div>
+    <hr>
   </div>
   {% endif %}
 {% endif %}
