Add support for user un/flagging of comments

--- a/opentreemap/treemap/templates/treemap/map_feature_detail.html
+++ b/opentreemap/treemap/templates/treemap/map_feature_detail.html
@@ -136,6 +136,7 @@
                        {{ comment.submit_date|date:"d M Y, H:i" }}
                        {% if request.user.is_authenticated and not comment.is_removed %}
                        | <a data-comment-id="{{ comment.id|unlocalize }}" class="comment_reply_link">Reply</a>
+                       | <div data-class="comment-flag">{% include "otm_comments/partials/flagging.html" %}</div>
                        {% endif %}
                      </div>
                    </div>
@@ -249,6 +250,12 @@ var mapFeatureOptions = {
     streetView: '#street-view'
 };
 {% endlocalize %}
+</script>
+
+<script>
+(function(require) {
+    require('otm_comments/flagging')();
+})(require);
 </script>
 
 {% endblock scripts %}
