--- a/opentreemap/otm_comments/templates/otm_comments/partials/moderation_row.html
+++ b/opentreemap/otm_comments/templates/otm_comments/partials/moderation_row.html
@@ -29,6 +29,7 @@
         {% endfor %}
         {% endspaceless %}</label></p>
       {% endif %}
+      {% endwith %}
     </td>
     {% spaceless %}
     <td>
