--- a/opentreemap/treemap/css/sass/partials/pages/_scenarios.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_scenarios.scss
@@ -28,6 +28,17 @@
             }
         }
 
+        #distribution-land-use {
+            .row.controls {
+                text-align: right;
+
+                .reset {
+                    font-size: 1.2rem;
+                    text-decoration: underline;
+                }
+            }
+        }
+
         .add-step-container {
             position: absolute;
             overflow: hidden;
@@ -108,6 +119,11 @@
                             }
                         }
                     }
+                }
+
+                .collapsible-header {
+                    font-size: 1.2rem;
+                    padding: 10px;
                 }
 
                 @include checkboxes;
